Bug 343255 - Kate 5 saving with another encoding is missing
Summary: Kate 5 saving with another encoding is missing
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 5.0.0
Platform: Arch Linux Linux
: VHI grave
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 343312 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-25 00:10 UTC by Ongun Kanat
Modified: 2015-12-05 20:07 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ongun Kanat 2015-01-25 00:10:34 UTC
When I try to save a file as another file I cannot change encoding. The encoding dropdown is replaced with Filter dropdown, so I cannot change the encoding of the file.

Reproducible: Always

Steps to Reproduce:
1. Open any text file
2. Click Save As.. from File menu.
3. There is no such encoding option in Save dialog

Actual Results:  
There is a unuseable Filter combo box in the place of Encoding dropdown in previous version.

Expected Results:  
There must be a Encoding option.
Comment 1 Christoph Feck 2015-01-26 12:45:45 UTC
*** Bug 343312 has been marked as a duplicate of this bug. ***
Comment 3 Eike Hein 2015-01-30 00:08:53 UTC
I've run into this problem as well.
Comment 4 Dominik Haumann 2015-01-30 14:10:00 UTC
Question is: Is it possible to have such an encoding dialog also on other platforms? If no, then there is no portable way Kate could implement this inside the dialog.

We could use the KEncodingDialog again I suppose, but then we'll loose the "nativeness" again. It's still available in KIO:
http://api.kde.org/frameworks-api/frameworks5-apidocs/kio/html/classKEncodingFileDialog.html

Any suggestions?

PS: Other applications such as Kile solve this by having a Menu entry "File > Covert To > ..." with basically all encodings listed there then. Would also be an option, but the dialog was definitely better imho.
Comment 5 Ongun Kanat 2015-01-30 19:01:51 UTC
It may possible. However I can say there are many differences in dialogs between different versions of OSes like MS Windows. Thus there are many applications (e.g Adobe's Creative Cloud) implement their own dialogs. I don't know how things work at Mac OS X side. Anyway, Qt looks excellently native on both OSes above and I think using a custom dialog will not make user feel alienated (imho).

PS: @Dominik I agree with you having a field in dialog looks better instead of having a menu (which feels like hiding a feature rather than exposing it directly)
Comment 6 Ongun Kanat 2015-02-05 01:57:21 UTC
Any comments, or suggestions?

Are KDE/Kate devs planning something else?
Comment 7 Christoph Cullmann 2015-02-05 09:56:27 UTC
An interim solution would be an "Save as with Encoding" Menu, as actually no, the filedialog with an extra widget looks like an alien on Windows or Mac and misses a lot of the features the native dialogs have there.

But yes, the feature must come back, that was a fault made by me, didn't think about that as changing the encoding reloads the file there is ATM no real way to convert :(
Comment 8 Ongun Kanat 2015-02-18 21:38:55 UTC
I want to know what is the last situation of the bug? Is it planned to solve it?
Comment 9 David Rosca 2015-05-08 09:17:15 UTC
Git commit d9eeed19cefe87e7b2d7345c12177bf89d90ff3c by David Rosca.
Committed on 08/05/2015 at 09:15.
Pushed by drosca into branch 'master'.

Bring back use of KEncodingFileDialog

This reverts commits 6e57274917f146ac233f50fcb902e8f2569bbbd2
and 4ef4063a34314480287540a0a4f58127bd6523f2
REVIEW: 123677

M  +1    -0    src/CMakeLists.txt
M  +46   -15   src/document/katedocument.cpp

http://commits.kde.org/ktexteditor/d9eeed19cefe87e7b2d7345c12177bf89d90ff3c
Comment 10 Mladen 2015-12-05 20:07:09 UTC
Ktexteditor 5.16.0, encoding menu on file save dialog is missing again.