Bring back use of KEncodingFileDialog

This reverts commits 6e57274917f146ac233f50fcb902e8f2569bbbd2
and 4ef4063a34314480287540a0a4f58127bd6523f2

BUG: 343255
REVIEW: 123677